@@ -4,6 +4,11 @@ pkgcore-checks Release Notes
 See ChangeLog for full commit logs; this is summarized and major changes.
 
 
+* fix invalid flagging of use deps on PyQt4 for ia64; basically PyQt4[webkit]
+  is valid due to a pkg level masked use reversal... the checking code however
+  wasn't doing incremental expansion itself..  Same could occur for forced use.
+
+
 0.4.6: October 22, 2009
 
 * fix a bug in tristate use evaluation of potential USE combinations.
